tests/ui/fail/not-exists/resource.stderr
error: resource "unknown" not exists
 --> tests/ui/fail/not-exists/resource.rs:6:28
  |
6 |     let _ = l10n::message!("unknown", "welcome");
  |                            ^^^^^^^^^

error: resource "unknown" not exists
  --> tests/ui/fail/not-exists/resource.rs:10:16
   |
10 | #[l10n_message("unknown", "welcome")]
   |                ^^^^^^^^^

error: resource "unknown" not exists
  --> tests/ui/fail/not-exists/resource.rs:14:16
   |
14 | #[l10n_message("unknown", "state")]
   |                ^^^^^^^^^
